testdata/baselines/reference/submodule/compiler/subclassThisTypeAssignable02.errors.txt
file1.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.


==== tile1.ts (0 errors) ====
    interface Lifecycle<Attrs, State extends Lifecycle<Attrs, State>> {
    	oninit?(vnode: Vnode<Attrs, State>): number;
    	[_: number]: any;
    }
    
    interface Vnode<Attrs, State extends Lifecycle<Attrs, State>> {
    	tag: Component<Attrs, State>;
    }
    
    interface Component<Attrs, State extends Lifecycle<Attrs, State>> {
    	view(this: State, vnode: Vnode<Attrs, State>): number;
    }
    
    interface ClassComponent<A> extends Lifecycle<A, ClassComponent<A>> {
    	oninit?(vnode: Vnode<A, this>): number;
    	view(vnode: Vnode<A, this>): number;
    }
    
    interface MyAttrs { id: number }
    class C implements ClassComponent<MyAttrs> {
    	view(v: Vnode<MyAttrs, C>) { return 0; }
    
    	// Must declare a compatible-ish index signature or else
    	// we won't correctly implement ClassComponent.
    	[_: number]: unknown;
    }
    
    const test8: ClassComponent<any> = new C();
==== file1.js (1 errors) ====
    /** @type {ClassComponent<any>} */
               ~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const test9 = new C();
    